style: fix button spacing

--- a/src/components/PercentageChooser.module.css
+++ b/src/components/PercentageChooser.module.css
@@ -83,4 +83,8 @@
   .container {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .customContainer > button {
+    padding-right: 0.8rem;
+  }
 }
